# stuttgart_reg_agent

./: .gitignore  Dockerfile  Openai API key.rtf  Procfile  README.md  build_embeddings_locally.py  coordinator_agent.py  debug_env.py  gemini_test.py  optimized_app.py  precomputed_rag.py  pyproject.toml  regenerate_embeddings.py  requirements_optimized.txt  run_app.py  run_local.py  run_optimized.py  schemas.py
1_foundations/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb  app.py
1_foundations/me/: summary.txt
2_openai/: 1_lab1.ipynb  2_lab2.ipynb  3_lab3.ipynb  4_lab4.ipynb
2_openai/deep_research/: README.md  deep_research.py  email_agent.py  research_manager.py  search_agent.py
3_crew/: Procfile  document_analyzer.py  replacements.txt  requirements.txt  run_app.py  run_optimized.py  test_api.py
3_crew/debate/output/: decide.md  oppose.md  propose.md
3_crew/embeddings/: documents.json  model_info.json
3_crew/stuttgart_reg_agent.git/: config  packed-refs
config/: tasks.yaml
data/: process_pdfs.py
data/logs/: summary.csv
data/memory/: chroma.sqlite3
embeddings/: documents.json  model_info.json
memory/: documents_cache.json  embeddings.jsonl  embeddings_cache.pkl  index_metadata.json  last_run_results.json
memory/pdf_crew/: chroma.sqlite3
src/stuttgart_reg_agent/: __init__.py  app.py  crew.py  main.py  new_crew.py  optimized_app.py  optimized_rag.py  plot_input.json  run_simple.py  schemas.py
src/stuttgart_reg_agent.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
static/: index.html
tools/: groq_client.py
(+32 files in other folders)
